crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__separate_future_imports.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
./resources/test/fixtures/isort/separate_future_imports.py:1:1: I001 [*] Import block is un-sorted or un-formatted
  |
1 | / import sys
2 | | import os
3 | | from __future__ import annotations
  |
  = help: Organize imports

ℹ Suggested fix
1   |-import sys
2   |-import os
3 1 | from __future__ import annotations
  2 |+
  3 |+import os
  4 |+import sys


