crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__star_before_others.py.snap
---
source: crates/ruff/src/rules/isort/mod.rs
expression: diagnostics
---
- - kind:
      name: UnsortedImports
      body: Import block is un-sorted or un-formatted
      suggestion: Organize imports
      fixable: true
    location:
      row: 1
      column: 0
    end_location:
      row: 4
      column: 0
    fix:
      content: "from .logging import config_logging\nfrom .settings import *\nfrom .settings import ENV\n"
      location:
        row: 1
        column: 0
      end_location:
        row: 4
        column: 0
    parent: ~

