crates/ruff/src/rules/isort/snapshots/ruff__rules__isort__tests__straight_required_import_docstring.pyi.snap
---
source: crates/ruff/src/rules/isort/mod.rs
---
docstring.pyi:1:1: I002 [*] Missing required import: `import os`
  |
1 | """Hello, world!"""
  |  I002
2 | 
3 | x = 1
  |
  = help: Insert required import: `import os`

ℹ Fix
1 1 | """Hello, world!"""
  2 |+import os
2 3 | 
3 4 | x = 1


